<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.smartregister</groupId>
	<artifactId>opensrp-server-openlmis</artifactId>
	<packaging>pom</packaging>

	<version>1.0.0</version>

	<name>opensrp-server-openlmis</name>
	<description>OpenSRP Server OpenLMIS module</description>
	<url>http://github.com/OpenSRP/opensrp-server</url>

	<modules>
		<module>openlmis-stock</module>
	</modules>

	<properties>
		<main.basedir>${project.basedir}</main.basedir>
		<motech.version>0.11</motech.version>
		<motech.contrib.group>org.motechproject.contrib-drishti</motech.contrib.group>
		<motech.contrib.version>0.1-SNAPSHOT</motech.contrib.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring.version>3.1.1.RELEASE</spring.version>
		<mysql.connector.version>5.1.36</mysql.connector.version>
		<jackson.version>1.9.7</jackson.version>
		<opensrp.updatePolicy>always</opensrp.updatePolicy>
		<maven-deploy-plugin.version>2.8.1</maven-deploy-plugin.version>
		<nexus-staging-maven-plugin.version>1.5.1</nexus-staging-maven-plugin.version>
		<maven-release-plugin.version>2.4.2</maven-release-plugin.version>
		<maven.deploy.skip>true</maven.deploy.skip>
	</properties>

	<distributionManagement>
		<snapshotRepository>
			<id>nexus-snapshots</id>
			<name>Nexus Snapshots Repository</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
			<uniqueVersion>false</uniqueVersion>
		</snapshotRepository>
		<repository>
			<id>nexus-releases</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
		</repository>
	</distributionManagement>

	<scm>
		<connection>scm:git:git@github.com:OpenSRP/opensrp-server-common.git</connection>
		<developerConnection>scm:git:git@github.com:OpenSRP/opensrp-server-common.git</developerConnection>
		<url>https://github.com/OpenSRP/opensrp-server-common</url>
	</scm>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>Open Smart Register Platform (OpenSRP) is Licensed under the Apache License, Version 2.0</comments>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>opensrp_developer</id>
			<name>OpenSRP Developer</name>
			<email>info@smartregister.org</email>
			<url>https://groups.google.com/forum/#!forum/opensrp-dev</url>
			<organization>OpenSRP</organization>
			<organizationUrl>http://smartregister.org</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>Africa/Nairobi</timezone>
		</developer>
	</developers>

	<pluginRepositories>
		<pluginRepository>
			<id>jasmine-js-bdd</id>
			<name>Jasmine JavaScript BDD Repository</name>
			<url>http://searls-maven-repository.googlecode.com/svn/trunk/snapshots</url>
		</pluginRepository>
	</pluginRepositories>

	<repositories>
		<repository>
			<id>central</id>
			<url>http://repo1.maven.org/maven2</url>
			<name>Repository for dependencies</name>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>spring-maven-release</id>
			<name>Spring Maven Release Repository</name>
			<url>http://maven.springframework.org/release</url>
		</repository>
		<repository>
			<id>spring-maven-milestone</id>
			<name>Spring Maven Milestone Repository</name>
			<url>http://maven.springframework.org/milestone</url>
		</repository>
		<repository>
			<id>motech.opensrp</id>
			<name>Motech Snapshots Repository</name>
			<url>http://nexus.motechproject.org/content/repositories/opensrp-server</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>motech.nexus</id>
			<name>Motech Snapshots Repository</name>
			<url>http://nexus.motechproject.org/content/repositories/snapshots</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>motech.nexus.release</id>
			<name>Motech Snapshots Repository</name>
			<url>http://nexus.motechproject.org/content/repositories/releases</url>
		</repository>
	</repositories>
	<profiles>
		<profile>
			<id>skip-integration-tests</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<version>2.9</version>
						<executions>
							<execution>
								<goals>
									<goal>integration-test</goal>
									<goal>verify</goal>
								</goals>
								<configuration>
									<argLine>-XX:MaxPermSize=1024M</argLine>
									<excludes>
										<exclude>**/it/**</exclude>
									</excludes>
									<redirectTestOutputToFile>true</redirectTestOutputToFile>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>integration-tests</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>

			<build>
				<!-- <pluginManagement> -->
				<!-- </pluginManagement> -->
			</build>
		</profile>
		<profile>
			<id>couchDb</id>
			<activation>
				<property>
					<name>opensrp.database.type</name>
					<value>couchdb</value>
				</property>
			</activation>
			<properties>
				<opensrp.database.profile>couchdb</opensrp.database.profile>
			</properties>
		</profile>
		<profile>
			<id>postgres</id>
			<activation>
				<activeByDefault>true</activeByDefault>
				<property>
					<name>opensrp.database.type</name>
					<value>postgres</value>
				</property>
			</activation>
			<properties>
				<opensrp.database.profile>postgres</opensrp.database.profile>
			</properties>
		</profile>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.5</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>1.5.1</version>
						<executions>
							<execution>
								<id>default-deploy</id>
								<phase>deploy</phase>
								<goals>
									<goal>deploy</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<serverId>nexus-releases</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<skipStaging>false</skipStaging>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<build>
		<!-- <pluginManagement> -->
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<outputDirectory />
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<doclint>none</doclint>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>${nexus-staging-maven-plugin.version}</version>
				<executions>
					<execution>
						<id>default-deploy</id>
						<phase>deploy</phase>
						<goals>
							<goal>deploy</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<serverId>nexus-snapshots</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<skipStaging>true</skipStaging>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>properties-maven-plugin</artifactId>
				<version>1.0-alpha-2</version>
				<executions>
					<execution>
						<phase>initialize</phase>
						<goals>
							<goal>read-project-properties</goal>
						</goals>
						<configuration>
							<files>
								<file>${main.basedir}/assets/config/openlmis.properties</file>
							</files>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.20</version>
				<configuration>
					<printSummary>true</printSummary>
					<excludes>
						<exclude>**/it/**</exclude>
					</excludes>

				</configuration>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.7.9</version>
				<configuration>
					<destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
					<dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
				</configuration>
				<executions>
					<execution>
						<id>jacoco-initialize</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>jacoco-site</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eluder.coveralls</groupId>
				<artifactId>coveralls-maven-plugin</artifactId>
				<version>4.0.0</version>
			</plugin>

		</plugins>
		<!-- </pluginManagement> -->
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.codehaus.mojo</groupId>
										<artifactId>
											properties-maven-plugin
										</artifactId>
										<versionRange>
											[1.0-alpha-2,)
										</versionRange>
										<goals>
											<goal>
												read-project-properties
											</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
